<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <WebView
        android:id="@+id/fragmentWebView_webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </WebView>

</android.support.constraint.ConstraintLayout>